Fix background color and wrap

--- a/css/main.css
+++ b/css/main.css
@@ -24,7 +24,7 @@ ul {
 }
 
 a {
-	color:black;
+	color: black;
 	text-decoration: none;
 }
 	a:visited {
@@ -40,7 +40,7 @@ a {
 }
 
 .with_bgcolor {
-	background-color: #479B64;
+	background-color: #149959;
 	color: #ffffff;
 	padding: 80px 0 50px 0;
 }
@@ -95,8 +95,11 @@ h3 {
 
 .work-list {
 	max-width: 700px;
+	display: -webkit-flex;
 	display: flex;
+	-webkit-flex-wrap: wrap;
 	flex-wrap: wrap;
+
 }
 	.work-unit {
 		width: 238px;
@@ -121,16 +124,16 @@ h3 {
 	margin-bottom: 1rem;
 }
 	.contact p a {
-		border-bottom: 2px solid #a5c5a7;
+		border-bottom: 2px solid #97c6a7;
 		padding-bottom: 1px;
 	}
 	.contact p a:hover {
-		color: #479B64;
+		color: #149959;
 	}
 
 /* Footer */
 .site_footer {
-	border-top: 2px solid #479B64;
+	border-top: 2px solid #149959;
 }
 	.site_footer p {
 		text-align: center;
